kubernetes/apps/defectdojo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defectdojo
  namespace: security
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: defectdojo
spec:
  rules:
    - host: defectdojo.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: defectdojo-django
                port:
                  number: 80
    - host: defectdojo.sargeant.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: defectdojo-django
                port:
                  number: 80
  tls:
    - hosts:
        - defectdojo.sargeant.co
      secretName: defectdojo-tls
